[package]
name = "rustlight"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.4.1"
walkdir = "2.3.3"
error = "0.1.9"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
]
